swipe to refresh added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,20 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+       <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+           android:id="@+id/swipeContainer"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+           <com.todkars.shimmer.ShimmerRecyclerView
+               app:shimmer_recycler_item_count="5"
+               app:shimmer_recycler_layout="@layout/shimmer_item_layout"
+               android:id="@+id/recyclerview"
+               android:layout_width="0dp"
+               android:layout_height="0dp"
+               android:layout_marginStart="8dp"
+               android:layout_marginEnd="8dp"
+               android:orientation="vertical"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintHorizontal_bias="0.5"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toTopOf="parent" />
+       </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
