--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mediumGray">#D1D1D1</color>
+    <color name="darkGray">#4B4B4B</color>
 </resources>
